# sort_algo

./: .gitignore  README.md  algorithms.py  idk_anymore_2.py  main.py  pyproject.toml  sorter.py  utilities.py
utils/: __init__.py  algorithms.py  utilities.py
